Implemented Navigation Component

--- a/MyUserAPP/app/src/main/res/layout/authorization.xml
+++ b/MyUserAPP/app/src/main/res/layout/authorization.xml
@@ -3,12 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UserInterface.Splash"
     android:orientation="vertical">
 
-    <FrameLayout
+   <!-- <FrameLayout
         android:id="@+id/container1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" />-->
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/my_nav_host"
+
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:navGraph="@navigation/navigation_component"
+
+        app:defaultNavHost="true" />
 
 </LinearLayout>
