--- a/MyUserAPP/app/src/main/res/values/dimens.xml
+++ b/MyUserAPP/app/src/main/res/values/dimens.xml
@@ -47,4 +47,7 @@
     <dimen name="rv_et_width">150dp</dimen>
     <dimen name="rv_et_height">80dp</dimen>
     <dimen name="rv_et_padding">20dp</dimen>
+    <dimen name="shopping_img_ht">160dp</dimen>
+    <dimen name="product_txt_width">100dp</dimen>
+    <dimen name="product_text_size">12sp</dimen>
 </resources>
