--- a/MyUserAPP/app/src/main/res/values/styles.xml
+++ b/MyUserAPP/app/src/main/res/values/styles.xml
@@ -11,4 +11,7 @@
     <style name="TextviewStyle">
         <![CDATA[<resources>     <style name="TextviewStyle">         <item name="android:textColor">#86AD33</item>         <item name="android:textStyle">bold</item>         <item name="android:textSize">20dp</item>         <item name="android:padding">10dp</item>     </style> </resources>]]></style>
 
+    <style name="HeaderBar">
+        <item name="android:background">#303F9F</item>
+    </style>
 </resources>
